[gd_scene load_steps=6 format=3 uid="uid://dn85a83ky0gua"]

[ext_resource type="Script" path="res://scenes/game_over.gd" id="1_7qjgx"]
[ext_resource type="FontFile" uid="uid://b3crhy7kkibdm" path="res://fonts/F25_Bank_Printer_Bold.ttf" id="2_p7uvs"]
[ext_resource type="FontFile" uid="uid://c0stqxks8n63p" path="res://fonts/F25_Bank_Printer.ttf" id="3_dmo6x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j2ils"]
bg_color = Color(0.552941, 0.721569, 0.505882, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tba4l"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7qjgx")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_j2ils")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.294118)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("2_p7uvs")
theme_override_font_sizes/font_size = 32
text = "Game over"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.294118)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_dmo6x")
theme_override_font_sizes/font_size = 16
text = "And final results"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 160

[node name="PlayerList" type="VBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerTemplate" type="HBoxContainer" parent="PanelContainer/VBoxContainer/MarginContainer2/PlayerList"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PlayerName" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/PlayerList/PlayerTemplate"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.294118)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_dmo6x")
theme_override_font_sizes/font_size = 18
vertical_alignment = 1

[node name="PlayerCash" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2/PlayerList/PlayerTemplate"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.294118)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("3_dmo6x")
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2
vertical_alignment = 1

[node name="MarginContainer3" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer/MarginContainer3"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tba4l")
text = "Restart"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
theme_override_constants/margin_top = 64

[connection signal="pressed" from="PanelContainer/VBoxContainer/MarginContainer3/RestartButton" to="." method="_on_restart_button_pressed"]
